Implements v15.0.0 of the nodejs server and reactjs client
