# openapi.yaml
@@ -1,6 +1,6 @@
 openapi: "3.0.0"
 info:
-  version: 14.0.0
+  version: 15.0.0
   title: Jeera Project Manager
   license:
     name: MIT
@@ -297,7 +297,7 @@ paths:
     parameters: 
       - $ref: '#/components/parameters/projectId'
     post:
-      summary: Set the tasks status flow of the project (step 3/3 of the process to create a project)
+      summary: Set the tasks status flow of the project (step 3/3 of the process to create a project). The returned project will have a null nextCreationStep.
       operationId: setProjectTaskStatusFlow
       tags:
         - projects
@@ -336,11 +336,7 @@ paths:
     parameters: 
       - $ref: '#/components/parameters/projectId'
     post:
-<<<<<<< HEAD
-      summary: Set the project details (step 2/3 of the process to create a project). The returned project will have a nextCreationStep set to 'CREATION_COMPLETED'.
-=======
       summary: Set the project details (step 2/3 of the process to create a project)
->>>>>>> d558002... Update API specification
       operationId: setProjectDetails
       tags:
         - projects
@@ -1125,7 +1121,7 @@ components:
             - INITIALIZATION
             - TASK_FLOW_SETUP
             - INFORMATION_SETUP
-            - CREATION_COMPLETED
+            - null
       required: [ name, id, isArchived, collaborators ]
     TasksList:
       type: object
